syntax = "proto3";

package the_maze;

option java_multiple_files = true;
option java_package = "lib.connection";
option java_outer_classname = "TheMazeGrpcGdx";

import "google/protobuf/empty.proto";

service TheMaze {
  rpc Handshake (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Connect (ConnectRequest) returns (ConnectReply) {}
  rpc SyncGameState (stream GameStateRequest) returns (stream GameStateResponse) {}
}

message ConnectRequest {
  string id = 1;
}

message ConnectReply {
  int32 seed = 1;
}


message LocalPlayerInput {
  string id = 1;
  float delta = 2;
  float inputX = 3;
  float inputY = 4;
  bool shootPressed = 5;
}


message PlayerState {
  string id = 1;
  float positionX = 2;
  float positionY = 3;
  float rotation = 4;
  BulletState bullet = 5;
}

message BulletState {
  bool fired = 1;
}


message GameStateRequest {
  LocalPlayerInput player = 1;
}

message GameStateResponse {
  repeated PlayerState players = 1;
}